--- a/.env
+++ b/.env
@@ -6,6 +6,9 @@ TRANSPORTER_USER_PASSWORD = jtwzpcvhnvptgfyc
 # Port
 PORT = 5000
 
+# JWT Secret key
 JWT_SECRET_KEY = SECRET_JWT_KEY_USED_FOR_OTP_AUTH_123@34569
+
+# MongoDB configs
 DB_NAME = OTP_BASED_AUTH_APP
 MONGO_URL = mongodb+srv://SahilMund:yqMwFzKsexJZX3mx@cluster0.oekbxpu.mongodb.net/
